--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/Theme.Formularios"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".FormProject"
             android:windowSoftInputMode="adjustResize"
-            android:exported="true">
+            android:exported="false" />
+        <activity
+            android:name=".FormEmail"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
